Alpha Release
- Changed MainAppFrame to GUI
- Fixed networking stuff for presentation
- What's left are optional features such as sound and AI